<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="my_title">My Nanodegree Apps!</string>
    <string name="button_text">Spotify Streamer</string>
    <string name="button2_text">Scores App</string>
    <string name="button3_text">Library App</string>
    <string name="button4_text">Build it Bigger</string>
    <string name="button5_text">Bacon Reader</string>
    <string name="button6_text">Capstone: My Own App</string>
    <string name="button1_click_text">This button will launch my Spotify streamer app !</string>
    <string name="button2_click_text">This button will launch my scores app !</string>
    <string name="button3_click_text">This button will launch my library app !</string>
    <string name="button4_click_text">This button will launch my build it bigger app !</string>
    <string name="button5_click_text">This button will launch my bacon reader app !</string>
    <string name="button6_click_text">This button will launch my own app !</string>
</resources>
