<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:id="@+id/RelativeLayout"
                android:nestedScrollingEnabled="false"
                android:longClickable="true">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/my_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_text"
            android:id="@+id/button1"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="#F08C35"
            android:textAllCaps="true"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button2_text"
            android:id="@+id/button2"
            android:layout_below="@+id/button1"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="#F08C35"
            android:textAllCaps="true"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button3_text"
            android:id="@+id/button3"
            android:layout_below="@+id/button2"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="#F08C35"
            android:textAllCaps="true"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button4_text"
            android:id="@+id/button4"
            android:layout_below="@+id/button3"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="#F08C35"
            android:textAllCaps="true"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button5_text"
            android:id="@+id/button5"
            android:layout_below="@+id/button4"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="#F08C35"
            android:textAllCaps="true"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button6_text"
            android:id="@+id/button6"
            android:layout_below="@+id/button5"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="#f02877"
            android:textAllCaps="true"/>

</RelativeLayout>
